# glMillSimulator

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  glMillSimulator.sln
src/MillSimulator/: CMakeLists.txt  DlgCAMSimulator.cpp  DlgCAMSimulator.h  EndMill.cpp  EndMill.h  EndMillBall.cpp  EndMillBall.h  EndMillFlat.cpp  EndMillFlat.h  EndMillTaper.cpp  EndMillTaper.h  GCodeParser.cpp  GCodeParser.h  GlUtils.cpp  GlUtils.h  GuiDisplay.cpp  GuiDisplay.h  MillMotion.h  MillObject.cpp  MillObject.h  MillOperation.cpp  MillOperation.h  MillPathLine.cpp  MillPathLine.h  MillPathSegment.cpp  MillPathSegment.h  MillSimulation.cpp  MillSimulation.h  MillSimulator.vcxproj  OpenGlWrapper.h  Shader.cpp  Shader.h  Shaders.cpp  SimDisplay.cpp  SimDisplay.h  SimShapes.cpp  SimShapes.h  StockObject.cpp  StockObject.h  Texture.cpp  (+6 more)
src/MillSimulator/test_files/: cam_test1.txt
